[gd_scene load_steps=2 format=3 uid="uid://cb5ohyh4ffm2y"]

[ext_resource type="Script" path="res://scripts/spawner.gd" id="1_vlbpg"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_vlbpg")

[node name="spawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="countTimer" type="Timer" parent="."]
wait_time = 30.0
autostart = true

[connection signal="timeout" from="spawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="countTimer" to="." method="_on_count_timer_timeout"]
